--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "watch:test": "mocha -w"
   },
   "repository": {
     "type": "git",
