--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "nodemon": "^1.12.1",
     "prettier-eslint": "^8.2.2",
     "supertest": "^3.0.0"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
