--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-things": "^0.2.0",
     "eslint": "^4.11.0",
     "mocha": "^4.0.1",
     "nodemon": "^1.12.1",
