--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --timeout 5000",
     "dev": "nodemon server.js",
     "watch:test": "mocha -w",
     "lint": "eslint **/*.js"
