--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.16.2",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "url-join": "^2.0.2"
+    "url-join": "^2.0.2",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
