--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha --timeout 5000",
     "dev": "nodemon server.js",
     "watch:test": "mocha -w --timeout 5000",
-    "lint": "eslint **/*.js"
+    "lint": "eslint **/*.js",
+    "start": "pm2 start server.js"
   },
   "repository": {
     "type": "git",
