--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,9 @@ services:
       - "80:8080"
     links:
       - api:mashup-api
+    restart: always
   api:
     build: .
+    restart: always
+    depends_on:
+      - caddy
